[gd_scene load_steps=8 format=2]

[ext_resource path="res://Combat/Elements/ActorPanel.gd" type="Script" id=1]
[ext_resource path="res://Assets/elf_f_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Assets/FreePixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.87451, 0.152941, 0.152941, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.498039, 0.0470588, 0.0470588, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="ActorPanel" type="Control" groups=["Actor"]]
anchor_right = 0.117188
anchor_bottom = 0.277778
margin_right = -0.000640869
margin_bottom = -0.000152588
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = -10.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
step = 1.0
value = 6.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelValue" type="Label" parent="ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "10/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 27, -24 )
scale = Vector2( 6, 6 )
texture = ExtResource( 2 )
centered = false

[node name="NameLevel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 64.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Mago Lv. 1"
__meta__ = {
"_edit_use_anchors_": false
}
